子韶-0522-tpcc-from-gongbo

--- a/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/1.experience-scalable-oltp/1.run-the-tpc-c-test-on-oceanbase-database.md
+++ b/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/1.experience-scalable-oltp/1.run-the-tpc-c-test-on-oceanbase-database.md
@@ -1,14 +1,14 @@
 # Run the TPC-C benchmark in OceanBase Database
 
-The TPC-C benchmark, launched by the Transaction Processing Performance Council (TPC), is a crucial reference for performance testing in the database industry. Leading companies worldwide participate in the TPC-C benchmark, submitting their results to TPC to top the performance chart. OceanBase Database made history twice in 2019 and 2020 by breaking world records as the first distributed relational database on the list. 
+The TPC-C benchmark test is one of the performance test standards defined by the Transaction Processing Performance Council (TPC). Since its release, the TPC-C benchmark test has become an important reference for performance tests in the database industry. Major database vendors around the world submit their test results to the TPC from time to time, expecting to rank higher in the TPC-C benchmark test. OceanBase Database set new world records in the TPC-C benchmark test twice in 2019 and 2020 as the first distributed relational database in the list. 
 
-This topic describes how to get started with the online transaction processing (OLTP) capability of OceanBase Database by running the TPC-C benchmark.
+This topic describes how to run the TPC-C benchmark test in OceanBase Database to experience its online transaction processing (OLTP) capability.
 
 ## TPC-C overview
 
 ### Database model
 
-The TPC-C benchmark specifies the initial state of the database and the rules for generating data in the database. According to the rules, the ITEM table contains 100,000 types of commodities, and the number of warehouses can be adjusted. Assume that the `WAREHOUSE` table contains `W` records, then:
+The TPC-C benchmark test specifies the initial state of the database under test, which is the rules for generating data in the database. According to the rules, the ITEM table contains 100,000 types of commodities, and the number of warehouses can be adjusted. Assuming that the `WAREHOUSE` table contains `W` records, then:
 
 - The `STOCK` table must contain W × 100,000 records, indicating that each warehouse corresponds to the stock data of 100,000 types of commodities.
 - The `DISTRICT` table must contain W × 10 records, indicating that each warehouse serves 10 districts.
@@ -26,23 +26,23 @@ A transaction history record is generated after a customer pays for an order. Ea
 
 The TPC-C benchmark involves the following five transaction types:
 
-- NewOrder transaction: A NewOrder transaction randomly selects 5 to 15 commodities from a warehouse to create an order. A fixed 1% of the transactions are chosen to simulate errors and rolled back. Generally, this type of transactions cannot exceed 45% of all types of transactions.
+- New-Order transaction: A New-Order transaction randomly selects 5 to 15 commodities from a warehouse to create an order. A fixed 1% of the transactions are chosen to simulate errors and rolled back. Generally, transactions of this type cannot exceed 45% of all types of transactions.
 - Payment transaction: A payment transaction updates the balance of a customer to reflect the payment of the customer. Transactions of this type account for 43% of all types of transactions.
-- OrderStatus transaction: An OrderStatus transaction randomly selects a customer to query the latest order of the customer and displays the status of each commodity in the order. This type of transactions accounts for 4% of all types of transactions.
-- Delivery transaction: A delivery transaction batch-processes orders, updates the balances of the customers who placed the orders, and deletes the orders from the NewOrder table. This type of transactions accounts for 4% of all types of transactions.
-- The Stock-Level transaction: A Stock-Level transaction analyzes the stock level status of commodities. This type of transactions accounts for 4% of all types of transactions.
+- Order-Status transaction: An Order-Status transaction randomly selects a customer to query the latest order of the customer and displays the status of each commodity in the order. Transactions of this type account for 4% of all types of transactions.
+- Delivery transaction: A delivery transaction batch-processes orders, updates the balances of the customers who placed the orders, and deletes the orders from the New-Order table. Transactions of this type account for 4% of all types of transactions.
+- Stock-Level transaction: A Stock-Level transaction analyzes the stock level status of commodities. Transactions of this type account for 4% of all types of transactions.
 
 ## Prepare the environment
 
-### OceanBase cluster
+### Prepare an OceanBase cluster
 
-You can observe the performance of OceanBase Database in different ways based on the type of your OceanBase cluster. If you have deployed a single-node OceanBase cluster, you can observe the performance of OceanBase Database in standalone deployment mode. For more information about how to create an OceanBase cluster, see "Quick Start". To experience the scalable OLTP capability of the distributed architecture of OceanBase Database, we recommend that you deploy an OceanBase cluster with at least three nodes.
+The performance of OceanBase Database may vary depending on the type of OceanBase cluster that you have deployed. If you have deployed a single-node OceanBase cluster, you can observe the performance of OceanBase Database in standalone mode. If you want to experience the scalable OLTP capability of OceanBase Database's distributed architecture, it is recommended that you deploy an OceanBase cluster with at least three nodes.
 
-In this example, the tenant mode is MySQL and the tenant name is `test`. You can create a tenant. For more information, see [Experience the multitenancy feature](../4.experience-multi-tenant-features.md).
+The example below uses the tenant mode `MySQL` and the tenant name `test`. To create your own tenant, follow the steps in [Experience the multitenancy feature](../4.experience-multi-tenant-features.md).
 
 ### Install BenchmarkSQL
 
-TPC defines strict and detailed test standards for the TPC-C benchmark. Individual developers can use general open source test tools to simulate TPC-C scenarios. For example, BenchmarkSQL is used in this topic. You can download this tool from the [BenchmarkSQL official website](https://sourceforge.net/projects/benchmarksql/).
+The TPC has defined strict and detailed test standards for the TPC-C benchmark. Individual developers can simulate TPC-C benchmark scenarios using common open-source test tools. This topic uses BenchmarkSQL as an example. You can download BenchmarkSQL from its official website at [BenchmarkSQL official website](https://sourceforge.net/projects/benchmarksql/).
 
   <main id="notice" type='notice'>
     <h4>Note</h4>
@@ -51,7 +51,7 @@ TPC defines strict and detailed test standards for the TPC-C benchmark. Individu
 
 ### Adapt BenchmarkSQL 5.0
 
-BenchmarkSQL 5.0 does not support running the TPC-C benchmark by using OceanBase Database. This section describes how to solve the problem by adapting the source code of BenchmarkSQL 5.0.
+BenchmarkSQL 5.0 does not support running the TPC-C benchmark with OceanBase Database. This section provides a step-by-step guide on how to modify the BenchmarkSQL 5.0 source code to support OceanBase Database.
 
 1. Add OceanBase Database-related information to the `benchmarksql-5.0/src/client/jTPCC.java` file.
 
@@ -71,7 +71,7 @@ BenchmarkSQL 5.0 does not support running the TPC-C benchmark by using OceanBase
        }
    ```
 
-   Add OceanBase Database as another database type to the `benchmarksql-5.0/src/client/jTPCCConfig.java` file.
+  Modify the `benchmarksql-5.0/src/client/jTPCCConfig.java` file to add OceanBase Database as a database type.
 
    ```java
    public final static int         
@@ -110,7 +110,7 @@ BenchmarkSQL 5.0 does not support running the TPC-C benchmark by using OceanBase
    [oceanbase@testdrier benchmarksql-5.0]# ant
    ```
 
-4. Add OceanBase Database as another database type to the `benchmarksql-5.0/run/funcs.sh` file.
+4. Modify the `benchmarksql-5.0/run/funcs.sh` file to add OceanBase Database as a database type.
 
    ```java
    function setCP()
@@ -159,7 +159,7 @@ BenchmarkSQL 5.0 does not support running the TPC-C benchmark by using OceanBase
    AFTER_LOAD="indexCreates buildFinish"
    ```
 
-### Modify the configuration file.
+### Modify the configuration file
 
 The `props.ob` configuration file is stored in the `run/` directory of BenchmarkSQL.
 
@@ -204,7 +204,7 @@ osCollectorInterval=1
 
 <main id="notice" type='explain'>
   <h4>Note</h4>
-  <p><ul><li><code>db</code>: the database type. Retain the setting in the template. </li><li><code>driver</code>: the driver file. We recommend that you use the JDBC driver <code>oceanbase-client</code> of OceanBase Database. If you want to use this driver, contact Technical Support. </li><li><code>conn</code>: the connection information. We recommend that you set the IP address and port to that of the OBServer node, and retain other settings in the template. </li><li><code>user</code> and <code>password</code>: the username, tenant name, and password specified in the environment. If multiple OceanBase clusters are created in your environment, we recommend that you set the <code>user</code> parameter in the <code>{user_name}@{tenant_name}#{cluster_name}</code> format. </li><li><code>warehouses</code>: the number of warehouses. This parameter determines the results of the performance test. If you want to test a multi-node OceanBase cluster, we recommend that you specify at least 1000 warehouses. If the servers have limited configurations, you can specify 100 warehouses. </li><li><code>loadWorkers</code>: the concurrency for loading warehouse data. If the servers have high configurations, you can set this parameter to a large value, for example, 100. If the servers have limited configurations, you can set this parameter to a small value, for example, 10. High concurrency increases memory consumption, which leads to errors or even failures in data loading. </li><li><code>terminals</code>: the concurrency for stress testing. We recommend that you set this parameter to a value that is not greater than the number of warehouses × 10. Otherwise, unnecessary lock waits occur. We recommend that you set this parameter to 1000 in the production environment, and to 100 in the test environment. </li><li><code>runMins</code>: the duration of the performance test. Longer duration requires higher performance and stability of the database. We recommend that you set this parameter to at least 10 minutes in general test environments and at least 1 hour in the production environment. </li></p>
+  <p><ul><li><code>db</code>: the database type. Retain the setting in the template. </li><li><code>driver</code>: the driver file. We recommend that you use the JDBC driver for OceanBase Database, <code>oceanbase-client</code>. If you need to use this driver, contact technical support personnel to obtain it. </li><li><code>conn</code>: the connection information. We recommend that you use the IP address and port number of the OBServer node and retain other settings in the template. </li><li><code>user</code> and <code>password</code>: the username, tenant name, and password specified in your environment. If multiple OceanBase clusters are created in your environment, we recommend that you set the <code>user</code> parameter in the <code>{user_name}@{tenant_name}#{cluster_name}</code> format. </li><li><code>warehouses</code>: the number of warehouses. This parameter determines the results of the performance test. If you want to test a multi-node OceanBase cluster, we recommend that you specify at least 1,000 warehouses. If the servers have limited configurations, you can specify 100 warehouses. </li><li><code>loadWorkers</code>: the number of concurrent worker threads for loading the warehouse data. If the servers have high configurations, you can set this parameter to a large value, for example, 100. If the servers have limited configurations, you can set this parameter to a small value, for example, 10. High concurrency increases memory consumption, which leads to errors or even failures in data loading. </li><li><code>terminals</code>: the number of concurrent users for stress testing. We recommend that you set this parameter to a value that is not greater than the number of warehouses × 10. Otherwise, unnecessary lock waits occur. We recommend that you set this parameter to at most 1,000 in a production environment and to not smaller than 100 in a test environment. </li><li><code>runMins</code>: the duration of the performance test in minutes. Longer duration poses higher challenges to the performance and stability of the database. We recommend that you set this parameter to at least 10 in a test environment and at least 60 in a production environment. </li></p>
 </main>
 
 ## Data preparations
@@ -362,7 +362,7 @@ create table bmsql_stock (
 )tablegroup='tpcc_group' use_bloom_filter=true partition by hash(s_w_id) partitions 9;
 ```
 
-Run the following command to create a table:
+Run the following command to create the tables:
 
 ```shell
 ./runSQL.sh props.ob sql.common/tableCreates_parts.sql
@@ -380,7 +380,7 @@ The `INSERT` SQL statement for loading data uses the batch insert feature, which
 
 ### Create indexes
 
-After the data is initialized, log on to the `test` tenant of the cluster and execute the following statement to create two indexes in the `tpccdb` database.
+After the data is initialized, log on to the `test` tenant of the cluster and run the following command to create two indexes in the `tpccdb` database.
 
 ```sql
 [root@obce-0000 run]# cat sql.common/indexCreates.sql
@@ -392,13 +392,13 @@ create  index bmsql_oorder_idx1
 
 ## Start the test
 
-Before you start the performance test, we recommend that you log on to the tenant and perform a major compaction, to achieve better test results. You can execute the following SQL statement to trigger a major compaction. This procedure is not a must.
+Before you start the performance test, we recommend that you log on to the tenant and perform a major compaction to obtain better test results. You can manually trigger a major compaction using the following method, but this step is not mandatory.
 
 ```sql
 obclient[oceanbase]> ALTER SYSTEM MAJOR FREEZE;
 ```
 
-Execute the following SQL statement to query the status of the major compaction. If the statement returns IDLE, the major compaction is completed.
+Run the following command to query the state of the major compaction. If the result returns IDLE, the major compaction is completed.
 
 ```sql
 MySQL [oceanbase]> SELECT * FROM oceanbase.CDB_OB_ZONE_MAJOR_COMPACTION;
@@ -417,11 +417,11 @@ After the major compaction is completed, run the following command to start the 
 ./runBenchmark.sh props.ob
 ```
 
-In the TPC-C benchmark, the tpmC value (transactions per minute) measures the maximum effective throughput of the system. Specifically, NewOrder transactions are counted, and the tpmC value is the number of orders processed per minute.
+In the TPC-C benchmark, the tpmC value (transactions per minute) measures the maximum effective throughput of the system. In fact, New-Order transactions are counted. Therefore, the tpmC value is the number of orders processed per minute.
 
 ## Experience the scalable OLTP capability of OceanBase Database
 
-Regardless of whether you use a single-node or multi-node cluster in the preceding test, only the zone where the leaders of the tenant reside participates in the transaction processing. This is because, by default, the leaders of the tenant are distributed to zones by priority.
+Regardless of whether you use a single-node or multi-node cluster in the preceding test, only the zone where the leaders of the tenant reside participates in transaction processing. This is because, by default, the leaders of the tenant are distributed to zones by priority.
 
 As a distributed database, OceanBase Database allows you to shuffle leader partitions of a tenant to multiple zones, to enable linear scaling of computing and processing capabilities across servers.
 
