--- a/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/1.experience-scalable-oltp/2.experience-the-hot-row-update-capability-of-oceanbase-database.md
+++ b/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/1.experience-scalable-oltp/2.experience-the-hot-row-update-capability-of-oceanbase-database.md
@@ -1,4 +1,4 @@
-# Experience the hot row update capability of OceanBase Database
+# Try out the hot row update capability of OceanBase Database
 
 With the development of online transactions and the e-commerce industry, hotspot concurrency poses increasing challenges to business systems. For example, the balances of hot accounts are frequently updated within a short time, or sellers launch flash sale events for popular products during massive online promotions. The hot row update is a process when some fields, such as the balance and inventory, of the same data row in the database are modified with high concurrency within a short time. However, to maintain transaction consistency in a relational database, the update of a data row must go through the process of locking, update, write log commit, and lock release, which is a serial process. Therefore, the hot row update capability is a performance bottleneck of a database. The key to improving the hot row update capability lies in reducing the lock time of a transaction.
 
@@ -166,4 +166,4 @@ This example describes only concurrent single-row updates. The ELR feature of Oc
 
 The ELR feature of OceanBase Database also applies to multi-region deployment scenarios with high network latency. For example, the execution of a single transaction requires 30 ms in the default scenario. If you enable the ELR feature and concurrent execution, the TPS can increase by about 100 times.
 
-The log protocol of OceanBase Database is based on multi-Paxos, with the optimized two-phase commit (2PC) process. Therefore, after the ELR feature is enabled, transaction consistency can still be ensured in the case of server restart or leader switchover. You can try these tests to experience the ELR feature.
+The log protocol of OceanBase Database is based on multi-Paxos, with the optimized two-phase commit (2PC) process. Therefore, after the ELR feature is enabled, transaction consistency can still be ensured in the case of server restart or leader switchover. You can try these tests to try out the ELR feature.
