--- a/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/2.experience-operational-olap.md
+++ b/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/2.experience-operational-olap.md
@@ -1,18 +1,18 @@
-# Experience operational OLAP
+# Try out operational OLAP
 
 OceanBase Database is suitable for hybrid transaction/analytical processing (HTAP) scenarios. OceanBase Database adopts a distributed architecture based on peer nodes. This architecture allows  OceanBase Database to handle high-concurrency and scalable online transaction processing (OLTP) tasks and perform parallel computing for online analytical processing (OLAP) tasks based on the massively parallel processing (MPP) architecture in the same data engine, without maintaining two sets of data.
 
 OceanBase Database not only allows you to analyze a large amount of online business data in parallel but also allows you to perform parallel DML (PDML) operations to quickly and securely execute large transactions that concurrently write data in batches. All these are achieved without compromising transaction consistency.
 
-The following describes how to manually run the Transaction Processing Performance Council Benchmark H (TPC-H) benchmark to show the characteristics of OceanBase Database in operational OLAP scenarios. TPC-H is a commonly used benchmark that measures the analysis and decision support capabilities of database systems by using a series of complex queries on massive amounts of data. For more information, visit the official website of TPC. On May 20, 2021, OceanBase Database set a new world record in running the TPC-H benchmark with a result of 15.26 million QphH. It is by far the only database that achieved top results in running both the TPC-C and TPC-H benchmarks, which testifies its HTAP capabilities in both online transactions and real-time analysis. For more information, see [TPC-H Results](https://www.tpc.org/tpch/results/tpch_results5.asp?version=3).
+The following describes how to manually run the Transaction Processing Performance Council Benchmark H (TPC-H) benchmark test to show the characteristics of OceanBase Database in operational OLAP scenarios. TPC-H is a commonly used benchmark that measures the analysis and decision support capabilities of database systems by using a series of complex queries on massive amounts of data. For more information, visit the official website of TPC. On May 20, 2021, OceanBase Database set a new world record in running the TPC-H benchmark with a result of 15.26 million QphH. It is by far the only database that achieved top results in running both the TPC-C and TPC-H benchmarks, which testifies its HTAP capabilities in both online transactions and real-time analysis. For more information, see [TPC-H Results](https://www.tpc.org/tpch/results/tpch_results5.asp?version=3).
 
-## Manually perform the TPC-H benchmark
+## Manually run the TPC-H benchmark test
 
-Use the official TPC-H tool to manually run the TPC-H benchmark step by step. Manual testing can help you better understand OceanBase Database, especially the settings of some parameters.
+Use the official TPC-H tools from TPC to manually run the TPC-H benchmark test step by step. Manual testing can help you better understand OceanBase Database, especially the settings of some parameters.
 
-### Environment optimization
+### Optimize the test environment
 
-Perform environment optimization in the `sys` tenant.
+Perform the following steps in the `sys` tenant:
 
 1. Optimize OceanBase Database parameters.
 
@@ -53,18 +53,18 @@ Perform environment optimization in the `sys` tenant.
    SET GLOBAL max_allowed_packet=67108864;
    SET GLOBAL secure_file_priv="";
    /*
-   We recommend that you set parallel_server_target to the value of the following formula: the number of CPU cores of the resource unit allocated to the test tenant × 10 × the number of servers × 0.8.
-   For example, if the resource unit of the test tenant is CREATE RESOURCE UNIT $unit_name max_cpu 26,
-   the value of this parameter is 26 × 10 × 3 × 0.8 = 624.
+   We recommend that you set 'parallel_server_target' to the result of the following formula: Number of CPU cores of the resource units allocated to the test tenant × 10 × Number of OBServer nodes × 0.8.
+   For example, if the number of CPU cores of the resource units allocated to the test tenant is 26 (CREATE RESOURCE UNIT $unit_name max_cpu 26),
+   then the 'parallel_server_target' parameter should be set to 26 × 10 × 3 × 0.8 = 624.
    */
    SET GLOBAL parallel_servers_target=624;
    ```
 
-3. Then, restart the cluster.
+3. Restart the cluster.
 
-### Install TPC-H tools
+### Install the TPC-H tools
 
-1. Download TPC-H tools. For more information, visit the [TPC-H Tools Download](https://www.tpc.org/tpc_documents_current_versions/download_programs/tools-download-request5.asp?bm_type=TPC-H&bm_vers=3.0.0&mode=CURRENT-ONLY) page.
+1. Download the TPC-H tools from the [TPC-H Tools Download](https://www.tpc.org/tpc_documents_current_versions/download_programs/tools-download-request5.asp?bm_type=TPC-H&bm_vers=3.0.0&mode=CURRENT-ONLY) page.
 
 2. Unzip the package and enter the TPC-H directory.
 
@@ -73,14 +73,14 @@ Perform environment optimization in the `sys` tenant.
    [wieck@localhost ~] $ cd TPC-H_Tools_v3.0.0
    ```
 
-3. Replicate the `makefile.suite` file.
+3. Copy the `Makefile.suite` file.
 
    ```bash
    [wieck@localhost TPC-H_Tools_v3.0.0] $ cd dbgen/
    [wieck@localhost dbgen] $ cp Makefile.suite Makefile
    ```
 
-4. Redefine the CC, DATABASE, MACHINE, and WORKLOAD parameters in the `makefile.suite` file.
+4. Redefine the `CC`, `DATABASE`, `MACHINE`, and `WORKLOAD` parameters in the `Makefile.suite` file.
 
    ```bash
    CC      = gcc
@@ -94,7 +94,7 @@ Perform environment optimization in the `sys` tenant.
    WORKLOAD = TPCH
    ```
 
-5. Add new macro definitions to the `tpcd.h` file.
+5. Modify the `tpcd.h` file and add new macro definitions.
 
    ```bash
    #ifdef MYSQL
@@ -115,7 +115,7 @@ make
 
 ### Generate data
 
-You can generate 10 GB, 100 GB, or 1 TB of data as needed. The following example shows the command to generate 100 GB of data.
+Generate 10 GB, 100 GB, or 1 TB of data as needed. The following example shows the command to generate 100 GB of data.
 
 ```bash
 ./dbgen -s 100
@@ -127,8 +127,8 @@ mv *.tbl tpch100
 
 <main id="notice" type='explain'>
   <h4>Note</h4>
-  <p> You can perform the following steps to generate an SQL query statement and then adjust it, or directly use the SQL query statement provided in [GitHub](https://github.com/oceanbase/obdeploy/tree/master/plugins/tpch/3.1.0/queries).  </p>
-  <p>To use an SQL query statement provided in GitHub, you must change the value of the <code>cpu_num</code> parameter in the statement to the actual number of CPU cores. </p>
+  <p> You can perform the following steps to generate an SQL query statement and then adjust it, or you can use the SQL query statement provided in [GitHub](https://github.com/oceanbase/obdeploy/tree/master/plugins/tpch/3.1.0/queries).  </p>
+  <p>However, before you use the SQL query statement provided in GitHub, change the value of the <code>cpu_num</code> parameter in the statement to the actual number of concurrent threads. </p>
 </main>
 
 1. Copy the `qgen` and `dists.dss` files to the `queries` directory.
@@ -161,9 +161,9 @@ mv *.tbl tpch100
    dos2unix *
    ```
 
-For more information about the modified SQL query statements, see [GitHub](https://github.com/oceanbase/obdeploy/tree/master/plugins/tpch/3.1.0/queries). You need to change the value of the `cpu_num` field in the SQL statements to the actual concurrency. To ensure the best performance, we recommend that you set the value to the total number of available CPU cores.
+For the modified SQL query statements, see [GitHub](https://github.com/oceanbase/obdeploy/tree/master/plugins/tpch/3.1.0/queries). You need to change the value of the `cpu_num` parameter in the SQL statements to the actual number of concurrent threads. To ensure the best performance, we recommend that you set the value to the total number of available CPU cores.
 
-You can run the following command under the `sys` tenant to view the total number of available CPUs for a tenant:
+Run the following command under the `sys` tenant to view the total number of available CPU cores for a tenant:
 
 ```sql
 select sum(max_cpu) from DBA_OB_UNITS ;
@@ -312,7 +312,7 @@ use $db_name;
 
 ### Load data
 
-You can write scripts based on the data and SQL query statements generated in the preceding steps. As an example, you can take the following steps to load data:
+Write your own script based on the data and SQL query statements generated from the preceding steps. The following is an example of how to load data.
 
 1. Create a directory for loading scripts.
 
@@ -332,14 +332,14 @@ You can write scripts based on the data and SQL query statements generated in th
    import sys
    import time
    import commands
-   hostname='$host_ip'  # Notice! You need to specify the IP address of an OBServer node, such as OBServer node A.
-   port='$host_port'               # The port number of OBServer node A.
-   tenant='$tenant_name'              # The tenant name.
-   user='$user'               # The username.
-   password='$password'           # The password.
-   data_path='$path'         # Notice! You need to specify the directory of tbl on OBServer node A.
-   db_name='$db_name'             # The database name.
-   # Create a table.
+   hostname='$host_ip'  # Attention! Please fill in the IP address of an OBServer node, such as OBServer A.
+   port='$host_port'               # Port number of OBServer A
+   tenant='$tenant_name'              # Tenant name
+   user='$user'               # Username
+   password='$password'           # Password
+   data_path='$path'         # Attention! Please fill in the directory where tbl is located on OBServer A.
+   db_name='$db_name'             # Database name
+   # Create a table
    cmd_str='obclient -h%s -P%s -u%s@%s -p%s -D%s < create_tpch_mysql_table_part.ddl'%(hostname,port,user,tenant,password,db_name)
    result = commands.getstatusoutput(cmd_str)
    print result
@@ -394,11 +394,11 @@ You can write scripts based on the data and SQL query statements generated in th
 
 4. Perform a major compaction.
 
-   A major compaction compacts SSTables and MemTables of the current major version with the full static data of the previous major version and generates a new set of full data. This makes the statistics of the storage layer more accurate and improves the stability of execution plans.
+   A major compaction combines the current major version's SSTables and MemTables with the full static data of the previous major version and generates a new set of full data. This makes the statistics of the storage layer more accurate and improves the stability of execution plans.
 
    <main id="notice" type='notice'>
      <h4>Note</h4>
-     <p>To perform a major compaction, you must log on to the sys tenant of the OceanBase cluster as the <code>root</code> user. </p>
+     <p>To perform a major compaction, you must log in to the sys tenant of the OceanBase cluster as the <code>root</code> user. </p>
    </main>
 
    ```sql
@@ -408,7 +408,7 @@ You can write scripts based on the data and SQL query statements generated in th
    Query OK, 0 rows affected
    ```
 
-5. Check whether the major compaction is completed.
+5. Check whether the major compaction is complete.
 
    ```sql
    MySQL [oceanbase]> SELECT name,value FROM oceanbase.__all_zone WHERE name='frozen_version' OR name='last_merged_version';
@@ -425,12 +425,12 @@ You can write scripts based on the data and SQL query statements generated in th
 
    <main id="notice" type='explain'>
     <h4>Note</h4>
-    <p> The major compaction task is completed when the value of <code>frozen_version</code> equals that of <code>last_merged_version</code> of all zones.   </p>
+    <p> The major compaction is considered complete when the value of <code>frozen_version</code> is equal to that of <code>last_merged_version</code> for all zones.   </p>
    </main>
 
 ### Run the test
 
-You can write scripts based on the data and SQL query statements generated in the preceding steps. As an example, you can take the following steps to perform the test:
+Write your own script based on the data and SQL query statements generated from the preceding steps. The following is an example of how to run the test.
 
 1. Write the `tpch.sh` script in the `queries` directory.
 
@@ -472,7 +472,7 @@ You can write scripts based on the data and SQL query statements generated in th
 
    A: The `tbl` file must be placed in a directory on the server that hosts OceanBase Database, because only local data can be imported and loaded.
 
-* Q: What do I do when an error occurred when I was viewing the data? Error message:
+* Q: What do I do when an error occurred while viewing data? Error message:
 
    ```bash
    ERROR 4624 (HY000): No memory or reach tenant memory limit
@@ -486,34 +486,34 @@ You can write scripts based on the data and SQL query statements generated in th
    ERROR 1227 (42501) at line 1: Access denied
    ```
 
-   A: You need to grant the access privilege to the logon user. Run the following command:
+   A: Grant the access privilege to the logon user by running the following command:
 
    ```bash
    grant file on *.* to tpch_100g_part;
    ```
 
-* Q: What do I do when an error occurred while adjusting dos2unix * for the SQL query? Error message:
+* Q: What do I do when an error occurred while adjusting `dos2unix *` for the SQL query? Error message:
 
    ```bash
    -bash: dos2unix: command not found
    ```
 
-   A: You need to install dos2unix. Run the following command to install it:
+   A: Install dos2unix by running the following command:
 
    ```bash
    yum install -y dos2unix
    ```
 
-## Manually experience operational OLAP
+## Try out operational OLAP
 
-In the test environment prepared for automatically running the TPC-H benchmark, you can manually run the TPC-H benchmark to verify the OLAP capabilities and features of OceanBase Database.
-First, log on to your OceanBase database from OBClient. If you do not have OBClient, you can use a MySQL client instead.
+Through the previous operation, you have obtained a TPC-H test environment. Now, try out the operational OLAP capability of OceanBase Database.
+First, log in to your OceanBase database through the OBClient or a MySQL client.
 
 ```shell
 obclient -h127.0.0.1 -P2881 -uroot@test -Dtest -A -p -c
 ```
 
-Before you start running the benchmark, set the degree of parallelism (DOP) based on the configurations of the OceanBase cluster and the tenant. We recommend that you set the DOP to be no more than twice the number of CPU cores of your tenant. For example, if your tenant has a maximum of 8 CPU cores, you can set the DOP to 16:
+Before you start, set the degree of parallelism (DOP) based on the configurations of the OceanBase cluster and the tenant. We recommend that you set the DOP to be no more than twice the number of CPU cores of your tenant. For example, if your tenant has a maximum of 8 CPU cores, set the DOP to 16:
 
 ```sql
 MySQL [test]> SET GLOBAL parallel_servers_target=16;
@@ -523,7 +523,7 @@ MySQL [test]> SET GLOBAL parallel_max_servers=16;
 Query OK, 0 rows affected
 ```
 
-OceanBase Database is compatible with most internal views of MySQL databases. You can execute the following SQL statement to query the sizes of tables in the current environment:
+OceanBase Database is compatible with most internal views of MySQL databases. Run the following command to query the sizes of tables in the current environment:
 
 ```sql
 MySQL [test]> SELECT table_name, table_rows, CONCAT(ROUND(data_length/(1024*1024*1024),2),' GB') table_size FROM information_schema.TABLES WHERE table_schema = 'test' order by table_rows desc;
@@ -542,11 +542,11 @@ MySQL [test]> SELECT table_name, table_rows, CONCAT(ROUND(data_length/(1024*1024
 8 rows in set
 ```
 
-Next, run the Q1 query to verify the query capability of OceanBase Database. Q1 queries the largest `lineitem` table to summarize and analyze the prices, discounts, shipments, and quantities of various products within the specified time. Q1 reads, partitions, sorts, and aggregates all data in the table.
+Run the Q1 query to verify the query capability of OceanBase Database. Q1 query will summarize and analyze the prices, discounts, shipments, and quantities of various products within a specified period of time on the largest table named `lineitem`. This query will read all the data in the entire table and perform partitioning, sorting, and aggregation.
 
-### Execute the query with concurrency disabled
+### Execute the query without enabling parallel queries (default)
 
-Concurrency is disabled by default. Execute the query with concurrency disabled:
+Run the following command:
 
 ```sql
 select
@@ -572,7 +572,7 @@ order by
  l_linestatus;
 ```
 
-Execution results in the test environment of this example:
+The execution result is as follows:
 
 ```sql
 +--------------+--------------+----------+----------------+----------------+--------------+---------+------------+----------+-------------+
@@ -586,9 +586,9 @@ Execution results in the test environment of this example:
 4 rows in set (6.791 sec)
 ```
 
-### Execute the query with concurrency enabled
+### Execute the query while enabling parallel queries
 
-The operational OLAP feature of OceanBase Database functions based on one set of data and execution engine, without the need to synchronize or maintain heterogeneous data. Add a `parallel` hint to the query statement to set the DOP to 8 and execute the statement again:
+The operational OLAP capability of OceanBase Database is based on a set of data and the execution engine, without the need to synchronize or maintain heterogeneous data. Add a `parallel` hint to the query statement to set the DOP to 8 and execute the statement again:
 
 ```sql
 select /*+parallel(8) */
@@ -614,7 +614,7 @@ order by
  l_linestatus;
 ```
 
-Execution results in the same test environment with the same datasets:
+In the same environment and datasets, the execution result is as follows:
 
 ```sql
 +--------------+--------------+----------+----------------+----------------+--------------+---------+------------+----------+-------------+
@@ -628,7 +628,7 @@ Execution results in the same test environment with the same datasets:
 4 rows in set (1.197 sec)
 ```
 
-After concurrency is enabled, the query speed is increased to about 6 times the speed when concurrency is disabled. You can run the `EXPLAIN` command to view the execution plan, which contains the DOP (line 18 and operator 1: dop=8):
+As you can see, the query speed is increased by nearly 6 times with parallel queries. Run the `EXPLAIN` command to view the execution plan, which contains the DOP (line 18, operator 1, dop=8):
 
 ```sql
 ===============================================================
@@ -661,27 +661,27 @@ Outputs & filters:
       access([lineitem.l_shipdate], [lineitem.l_returnflag], [lineitem.l_linestatus], [lineitem.l_quantity], [lineitem.l_extendedprice], [lineitem.l_discount], [lineitem.l_tax]), partitions(p[0-15])
 ```
 
-In this example, OceanBase Database is deployed on a single server. However, the most prominent feature of the parallel execution framework of OceanBase Database lies in that it can concurrently execute analytical queries on large amounts of data on multiple servers. For example, assume that a table contains hundreds of millions of data rows that are distributed on multiple OBServer nodes. During the execution of an analytical query, the distributed execution framework of OceanBase Database can generate a distributed parallel execution plan and use the resources of multiple OBServer nodes for analysis. Therefore, OceanBase Database has high scalability. In addition, you can set concurrency in multiple dimensions, such as SQL statements, sessions, and tables.
+In this example, OceanBase Database is deployed on a single server. However, the most prominent feature of the parallel execution framework of OceanBase Database lies in that it can concurrently execute analytical queries on large amounts of data on multiple servers. For example, if a table has hundreds of millions of data rows across multiple OBServer nodes, the distributed execution framework generates a distributed parallel execution plan and uses the resources of these nodes for analytical queries. Therefore, OceanBase Database has high scalability. In addition, you can set the DOP in multiple dimensions, such as SQL statement, session, and table.
 
-## Use OBD to automatically run the TPC-H benchmark
+## Use OBD to run the TPC-H benchmark test
 
 <main id="notice" >
     <h4>Applicability</h4>
-    <p>This topic applies only to OceanBase Database Community Edition. OceanBase Database Enterprise Edition does not support OceanBase Deployer (OBD). </p>
+    <p>This section applies only to OceanBase Database Community Edition. OceanBase Database Enterprise Edition does not support OceanBase Deployer (OBD). </p>
   </main>
 
-To run the TPC-H benchmark, you can use the TPC-H dataset generation tools available at the TPC official website, or use OBD to conveniently generate datasets, create tables, import data, and automatically execute 22 SQL statements.
-Before you use OBD to run the TPC-H benchmark, install the obtpch component on the server where OceanBase Database and OBD are deployed:
+Apart from using the official TPC-H tools from TPC, you can also use OBD to run the TPC-H benchmark test.
+Before you start, install the `obtpch` component on the server where OceanBase Database and OBD are deployed:
 
 ```test
 sudo yum install obtpch
 ```
 
-Then, run the following command to start running the TPC-H benchmark with a dataset size of 1 GB. The entire process contains dataset generation, schema import, and automatic benchmark running. In this example, it is assumed that your test environment is deployed in the same way as that in [Get started with OceanBase Database](../1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md). You can modify the cluster name, password, or installation directory as needed in the case of any differences.
+Then, run the following command to start the TPC-H benchmark test, with a dataset size of 1 GB. The entire process includes dataset generation, schema import, and automatic test execution. In this example, it is assumed that your test environment is deployed in the same way as that in [Get started with OceanBase Database](../1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md). You can modify the cluster name, password, installation directory, etc. to adapt to your situation.
 
   <main id="notice" type='notice'>
     <h4>Note</h4>
-    <p>Make sure that your disk space is sufficient to store the dataset files. Otherwise, system exceptions will occur if your disk space are fully occupied by these files. </p>
+    <p>Make sure that your disk space is sufficient to store the dataset files, so as to avoid filling up the space and causing system errors. </p>
   </main>
 
 In this example, the  ` /tmp `  directory is used to store dataset files.
@@ -691,10 +691,10 @@ cd /tmp
 obd test tpch obtest --tenant=test -s 1 --password='' --remote-tbl-dir=/tmp/tpch1
 ```
 
-After the preceding command is executed, OBD starts to run the benchmark. You can check each step of the process:
+After the preceding command is executed, OBD starts to run the benchmark test, and you can see each step of the test process.
 
 ![obd](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer/V3.1.4/zh-CN/quick-start/OLTP/%E4%BD%93%E9%AA%8COperational%20OLAP.png)
 
 ![sql](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer/V3.1.4/zh-CN/quick-start/OLTP/%E4%BD%BF%E7%94%A8OBD%E5%B7%A5%E5%85%B7%E8%87%AA%E5%8A%A8%E8%BF%9B%E8%A1%8CTPCH%E6%B5%8B%E8%AF%95.png)
 
-After the data is imported, OBD automatically executes 22 SQL statements and displays the time consumed for executing each SQL statement and the total time.
+After the data import is completed, OBD automatically executes 22 SQL statements and prints the execution time for each SQL statement as well as the total execution time.
