--- a/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/4.experience-multi-tenant-features.md
+++ b/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/4.experience-multi-tenant-features.md
@@ -1,12 +1,12 @@
-# Experience the multitenancy feature
+# Try out the multi-tenant feature
 
-The multitenancy feature of OceanBase Database allows you to create instance resource pools for clusters. Each tenant in OceanBase Database is an instance, which is similar to a MySQL instance. Data, privileges, and resources of tenants are isolated. Each tenant has its own access ports and CPU and memory resources.
+ Each tenant in OceanBase Database is an instance, which is similar to a MySQL instance. Data, privileges, and resources of tenants are isolated. Each tenant has its own access ports and CPU and memory resources.
 
 ## Background
 
-OceanBase Database allows you to flexibly adjust the CPU and memory resources allocated to a tenant, which is transparent to the upper-layer business system. The multitenancy mechanism allows you to efficiently use OceanBase cluster resources, reduce costs, ensure high availability and performance, and implement on-demand scaling based on your business requirements.
+OceanBase Database allows you to flexibly adjust the CPU and memory resources allocated to a tenant, which is transparent to the upper-layer business system. With the multi-tenant feature, you can efficiently use resources, reduce costs, ensure high availability and performance, and implement on-demand scaling based on your business requirements.
 
-To help you understand the multitenancy feature of OceanBase Database, the following example describes how to create an Oceanbase Database tenant.
+To help you better understand this feature, the following example describes how to create a tenant.
 
 ## Create unit configs
 
@@ -34,9 +34,9 @@ In this example, `unit1` and `unit2` are created, and their CPU and memory resou
 
 A unit config is a set of configuration specifications for a tenant, whereas a resource pool is a set of entity resources for a tenant. Therefore, in this step, you must create resource pools and associate them with the unit configs.
 
-In this example, `pool1` and `pool2` are created and associated with `unit1` and `unit2` respectively. As a result, the resource units are mapped to the resource pools. `UNIT_NUM` indicates the number of units specified in one zone. In the same tenant, you can allocate at most one unit` `to each node. `ZONE_LIST` specifies the zones where the tenant is deployed in the current cluster.
+In this example, `pool1` and `pool2` are created and associated with `unit1` and `unit2` respectively. As a result, the resource units are mapped to the resource pools. `UNIT_NUM` indicates the number of units specified in one zone. In the same tenant, you can allocate at most one unit to each node. `ZONE_LIST` specifies the zones where the tenant is deployed in the current cluster.
 
-In this example, the OceanBase cluster contains only one node. Therefore, only one unit and one zone list are specified. Before you create a resource pool, make sure that the available resources are sufficient. If the resources are insufficient, you can delete the existing `test` tenants or decrease the unit configs of the existing tenants. For more information, see [Modify tenant configurations and adjust instance resource specifications](#Modify tenant configurations and adjust instance resource specifications).
+In this example, the OceanBase cluster contains only one node. Therefore, only one unit and one zone list are specified. Before you create a resource pool, make sure that the available resources are sufficient. If the resources are insufficient, you can delete the existing `test` tenants or decrease the unit configs of the existing tenants. For more information, see `Modify tenant configurations and adjust instance resource specifications` below.
 
 ```sql
 obclient [oceanbase]> CREATE RESOURCE POOL pool1 UNIT='UNIT1',UNIT_NUM=1,ZONE_LIST=('zone1');
@@ -45,7 +45,7 @@ obclient [oceanbase]> CREATE RESOURCE POOL pool2 UNIT='UNIT2',UNIT_NUM=1,ZONE_LI
 
   <main id="notice" type='notice'>
     <h4>Note</h4>
-    <p>The preceding example applies to a single-node cluster. If your cluster contains three nodes, the value of <code>ZONE_LIST</code> must be in the format of <code>('zone1','zone2','zone3')</code>. You must enter the zone names based on the actual situation. </p>
+    <p>The preceding example applies to a single-node cluster. If your cluster contains three nodes, specify <code>ZONE_LIST</code> in the format <code>('zone1','zone2','zone3')</code>, and customize the zone names. </p>
   </main>
 
 ## Create tenants based on the created resource pools
@@ -79,7 +79,7 @@ obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS;
 
 If the preceding statement succeeds, you have created two tenants in the same cluster. Then, you can perform database operations in the tenants.
 
-Log on as the `root` user to the `tenant1` tenant of the cluster and create a test table.
+Log in as the `root` user to the `tenant1` tenant of the cluster and create a test table.
 
 ```sql
 obclient -hXXX.XX.XXX.106 -P2883 -uroot@tenant1#ob_test -p
@@ -108,7 +108,7 @@ obclient [test]> SHOW TABLES;
 1 row in set
 ```
 
-Log on as the `root` user to the `tenant2` tenant of the cluster and view the `test` database.
+Log in as the `root` user to the `tenant2` tenant of the cluster and view the `test` database.
 
 ```sql
 obclient -h***.**.***.106 -P2883 -uroot@tenant2#ob_test -p
@@ -130,7 +130,7 @@ obclient [test]> SHOW TABLES;
 Empty set
 ```
 
-The query results show that the resources, data, and permissions of the two tenants in the cluster are isolated. You can perform more tests to verify the tenant isolation feature of OceanBase Database.
+The query results show that the resources, data, and permissions of the two tenants in the cluster are isolated. You can perform more tests to try out the tenant isolation feature of OceanBase Database.
 
 ## Modify tenant configurations and adjust instance resource specifications
 
@@ -150,7 +150,7 @@ obclient [oceanbase]> SELECT * FROM oceanbase.DBA_OB_UNIT_CONFIGS;
 6 rows in set (0.003 sec)
 ```
 
-As shown in the query results, `unit1` is configured with 3 CPU cores and 6 GB of memory.
+As shown in the query result, `unit1` is configured with 3 CPU cores and 6 GB of memory.
 
 You can run the following command to adjust the CPU and memory resources of `unit1` to 5 CPU cores and 10 GB of memory.
 
