--- a/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/5.experience-ddl/1.experience-ddl-of-mysql-mode.md
+++ b/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/5.experience-ddl/1.experience-ddl-of-mysql-mode.md
@@ -1,4 +1,4 @@
-# Experience new DDL features in MySQL mode
+# Try out new DDL features in MySQL mode
 
 In MySQL mode, OceanBase Database allows you to change primary keys, partitioning types, data types of columns, and character sets through DDL operations.
 
