--- a/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/5.experience-ddl/2.experience-ddl-of-oracle-mode.md
+++ b/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/5.experience-ddl/2.experience-ddl-of-oracle-mode.md
@@ -1,4 +1,4 @@
-# Experience new DDL features in Oracle mode
+# Try out new DDL features in Oracle mode
 
 In Oracle mode, OceanBase Database allows you to change primary keys, partitioning types, and data types of columns through DDL operations.
 
