--- a/zh-CN/5.administrator-guide/11.operation-and-maintenance-management/5.daily-inspection/2.check-the-cluster-status.md
+++ b/zh-CN/5.administrator-guide/11.operation-and-maintenance-management/5.daily-inspection/2.check-the-cluster-status.md
@@ -9,9 +9,13 @@
 查看所有返回记录中 merge_status 的状态。
 
 ```sql
-obclient> SELECT status FROM oceanbase.DBA_OB_ZONES;
+obclient> SELECT * FROM oceanbase.CDB_OB_ZONE_MAJOR_COMPACTION\G
 ```
+* 合并状态：
+IDLE：未在合并中
+COMPACTING：正在合并中
+VERIFYING：正在校验 Checksum 中
 
-* 返回结果为 'IDEAL' : 集群合并状态健康。
+* 返回结果为 'IDLE' : 集群合并状态健康。
 
-* 返回结果非 'IDEAL' : 集群合并状态不正常，需对集群进行处理。
+* 返回结果非 'IDLE' : 集群合并状态不正常，需对集群进行处理。
